--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,12 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.6",
+    "sass-loader": "^14.2.1",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -39,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"http://localhost:3090"
 }
